--- a/test_style_sheet.css
+++ b/test_style_sheet.css
@@ -26,3 +26,54 @@ body {
      font-style: italic;
      color: green;
   }
+
+  .emily-name {
+     font-size: 40px;
+  }
+
+  .emily-name {
+   animation-name: name-glow;
+   animation-duration: 10s;
+   animation-iteration-count: infinite;
+   animation-direction: alternate;
+   pointer-events: none;
+ }
+
+ @keyframes name-glow {
+    0% {
+       background-color: red;
+       margin-left: 0;
+    }
+    10% {
+       background-color: white;
+    }
+    20% {
+       background-color: orangered;
+    }
+    30% {
+      background-color: white;
+   }
+    40% {
+       background-color: orange;
+    }
+    50% {
+      background-color: white;
+      margin-left: 50px;
+   }
+    60% {
+       background-color: goldenrod;
+    }
+    70% {
+      background-color: white;
+   }
+    80% {
+       background-color: gold;
+    }
+    90% {
+      background-color: white;
+   }
+    100% {
+       background-color: yellow;
+       margin-left: 0;
+    }
+ }
